# auto-kerchunk

./: .gitignore  CITATION.cff  README.md  auto_kerchunk.pbs  mpi_1.pbs  pyproject.toml  ref-marc_https.yaml  rename.ipynb  rename_kerchunk_source_path_without_compression.ipynb  rename_target.ipynb  setup.cfg
auto_kerchunk/: __main__.py  combine.py  compression.py  convert.py  intake.py  main.py  utils.py
auto_kerchunk/tests/: test_convert.py
ci/: env.yaml
examples/: auto_kerchunk.pbs  auto_kerchunk.yaml  auto_kerchunk_big.pbs  mpi_1.pbs
notebooks/: grid_test.ipynb  manual_kerchunk-NORTHWESTSHELF_ANALYSIS_FORECAST_PHY.ipynb  manual_kerchunk-odyssey.ipynb  manual_kerchunk.ipynb  manual_kerchunk_demodiam.ipynb  marc.ipynb  marc.yaml  mars3d.ipynb  ref-copernicus-insitu.ipynb  ref-marc.ipynb  ref-marc_https.ipynb  ref-osisaf.ipynb  satellite.ipynb  satellite.yaml
pbs/: draft_big.md  draft_big.sh  grid.md  grid.sh  index_draft.md  index_draft.sh  yearly_grid.sh
