[metadata]
name = auto-kerchunk
license = MIT
description = operate kerchunk on data files

[options]
packages = find:
python_requires = >=3.9
install_requires =
    dask
    fsspec
    rich
    typer
    kerchunk
    h5py
    ujson
    zarr

[flake8]
ignore =
  E203 # whitespace before ':' - doesn't work well with black
  E402 # module level import not at top of file
  E501 # line too long - let black worry about that
  E731 # do not assign a lambda expression, use a def
  W503 # line break before binary operator
exclude =
  .eggs
