[metadata]
name = auto-kerchunk
license = MIT
description = operate kerchunk on data files

[options]
packages = find:
python_requires = >=3.8
install_requires =
    dask
    fsspec<2022.3.0
    rich
    typer
    kerchunk<0.0.6
    h5py
    ujson
    xarray
    zarr
    zstandard
    dask-hpcconfig

[flake8]
ignore =
  E203 # whitespace before ':' - doesn't work well with black
  E402 # module level import not at top of file
  E501 # line too long - let black worry about that
  E731 # do not assign a lambda expression, use a def
  W503 # line break before binary operator
exclude =
  .eggs
